k8s/micro-k8s/bill/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  labels:
    app: api
spec:
  selector:
    matchLabels:
      app: api
  replicas: 1
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
      - name: api-v1
        image: zhuzean/bookkeeping:bill-svc
        imagePullPolicy: Always
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
        command: ["/bin/sh"]
        args: ["-c", "sleep 10
                && pip install -r requirements.txt
                && python3 manage.py makemigrations
                && python3 manage.py migrate
                && python3 manage.py collectstatic --noinput
                && gunicorn --config=gunicorn_config.py backend.wsgi:application"]
        ports:
        - containerPort: 80
