k8s/micro-k8s/bill/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: bill-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  tls:
  - hosts:
      - api.k8s.zean.pro
    secretName: api-tls
  rules:
    - host: api.k8s.zean.pro
      http:
        paths:
          - path: /(.*)
            pathType: Prefix
            backend:
              serviceName: api
              servicePort: 80
